# Cra3zUtility

./: .gitignore  CMakeLists.txt
cmake/: cra3zutilConfig.cmake.in
examples/preinstalled/cra3zutil/include/cra3zutil/: config.hpp  generator.hpp  move_only_function.hpp  scope_exit.hpp  thread_pool.hpp
examples/preinstalled/cra3zutil/include_module/cra3zutil/: fwd.inl
examples/preinstalled/cra3zutil/lib/cmake/cra3zutil/: cra3zutilConfig.cmake  headerTargets.cmake  moduleTargets.cmake
examples/preinstalled/cra3zutil/modules/: cra3zutil.cppm
examples/use_cpp20_module/: CMakeLists.txt  local_cra3zutil.cppm  main.cppm
include/cra3zutil/: scope_exit.hpp  type_list.hpp
modules/: cra3zutil.cppm
